Finally fixed #18 !!!
Turns out the issue was text file encoding. It was by default (Windows) encoding with ANSI/Windows-1252, which is a superset of ASCII; but it still isn't unicode. Now, the ChatLog will always write data in UTF-8, and it will convert it on initialization as well. 🎉